tests/lean/place_eqn.lean.expected.out
place_eqn.lean:4:16: error: don't know how to synthesize placeholder
foo : ℕ → ℕ
⊢ ℕ
place_eqn.lean:5:16: error: don't know how to synthesize placeholder
foo : ℕ → ℕ,
a : ℕ
⊢ ℕ
place_eqn.lean:3:0: error: failed to add declaration 'foo' to environment, value has metavariables
  λ (a : ℕ),
    nat.brec_on a
      (λ (a_1 : ℕ) (b : nat.below a_1),
         nat.cases_on a_1 (λ (b_1 : nat.below 0), ?M_1) (λ (a_2 : ℕ) (b_1 : nat.below (succ a_2)), ?M_2) b)
